[package]
name = "conductor"
version = "0.3.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = "0.12.15"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
thiserror = "2.0.12"
directories = "6.0.0"
cfg-if = "1.0.0"
chrono = "0.4.41"
rand = "0.9.1"
clap = { version = "4.5.37", features = ["derive"] }
toml = "0.8.22"

[profile.release]
lto = "thin"
strip = "symbols"