[project]
name = "conductor"
version = "0.2.0"
description = "Control Steam from anywhere"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["websockets~=15.0.1", "requests~=2.32.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "run.sh",
    "run.ps1",
    "out/payload.template.js",
    "api.d.ts",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "main.py",
    "run.sh",
    "run.ps1",
    "out/payload.template.js",
    "api.d.ts",
]
